--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -8,18 +8,18 @@ set -g base-index 1
 set-window-option -g automatic-rename on
 set-option -g set-titles on
 
+#Barra de estado en la parte superior
+#set-option -g status-position top
+
 # dividir pantallas con v y con s
 bind-key v split-window -h
 bind-key s split-window -v
 
-# Control + b + m to toggle mouse mode
-bind -n M-m set -g mouse on \; display "Mouse mode on"
-bind -n M-m setw -g mouse on \; display "Mouse mode on"
-bind -n M-n set -g mouse off \; display "Mouse mode off"
-bind -n M-n setw -g mouse off \; display "Mouse mode off"
-
-set-option -g set-clipboard on
-
+#bind -n M-m set -g mouse on \; display "Mouse mode on"
+#bind -n M-m setw -g mouse on \; display "Mouse mode on"
+#bind -n M-n set -g mouse off \; display "Mouse mode off"
+#bind -n M-n setw -g mouse off \; display "Mouse mode off"
+setw -g mouse on
 # Use Alt-arrow keys without prefix key to switch panes
 bind -n S-Left select-pane -L
 bind -n S-Right select-pane -R
@@ -43,6 +43,8 @@ bind -n M-Right next-window
 # No delay for escape key press
 set -sg escape-time 0
 
+bind-key a attach-session
+
 # Reload tmux config
 bind r source-file ~/.tmux.conf
 
@@ -53,23 +55,29 @@ bind r source-file ~/.tmux.conf
 #set -g status-left-length 30
 #set -g status-left '#[fg=green](#S) #(whoami) '
 #set -g status-right '#[default] #[fg=white]%H:%M:%S#[default]'
-#
+## Colores
+#set -g status-style "bg=colour235,fg=colour255"
+#set -g message-style "bg=colour235,fg=colour255"
+#set -g pane-border-style "fg=colour238"
+#set -g pane-active-border-style "fg=colour39"
+#set -g mode-style "bg=colour238,fg=colour255"
+## Estado
+#set -g status-left '#[fg=colour255 bg=colour39] #S #[fg=colour39 bg=colour235]#[fg=colour255 bg=colour235] #(whoami) '
+#set -g status-right '#[fg=colour255 bg=colour235] %H:%M:%S #[fg=colour39 bg=colour235]#[fg=colour255 bg=colour235] %d/%m/%y '
+## Configuración
+#set -g status-justify "centre"
+#set -g status-interval 5
+#set -g status-position bottom
+##set -g status-utf8 on
+#set -g default-terminal "screen-256color"
 
-# Colores
-set -g status-style "bg=colour235,fg=colour255"
-set -g message-style "bg=colour235,fg=colour255"
-set -g pane-border-style "fg=colour238"
-set -g pane-active-border-style "fg=colour39"
-set -g mode-style "bg=colour238,fg=colour255"
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'wfxr/tmux-power'
 
-# Estado
-set -g status-left '#[fg=colour255 bg=colour39] #S #[fg=colour39 bg=colour235]#[fg=colour255 bg=colour235] #(whoami) '
-set -g status-right '#[fg=colour255 bg=colour235] %H:%M:%S #[fg=colour39 bg=colour235]#[fg=colour255 bg=colour235] %d/%m/%y '
-
-# Configuración
-set -g status-justify "centre"
-set -g status-interval 5
-set -g status-position bottom
-#set -g status-utf8 on
-set -g default-terminal "screen-256color"
-
+#Configuracion tema  power 
+set -g @tmux_power_theme 'snow'
+set -g @tmux_power_show_upload_speed true
+set -g @tmux_power_show_download_speed true
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run -b '~/.tmux/plugins/tpm/tpm
