--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -4,7 +4,7 @@ set -g prefix C-b
 # Empezar la numeración de las ventanas creadas en 1 (la primera ventana)
 set -g base-index 1
 
-# Automatically set window title
+ # Titulo automatico 
 set-window-option -g automatic-rename on
 set-option -g set-titles on
 
@@ -74,10 +74,12 @@ bind r source-file ~/.tmux.conf
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'wfxr/tmux-power'
+set -g @plugin 'pwittchen/tmux-plugin-spotify'
 
 #Configuracion tema  power 
 set -g @tmux_power_theme 'snow'
 set -g @tmux_power_show_upload_speed true
 set -g @tmux_power_show_download_speed true
+
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run -b '~/.tmux/plugins/tpm/tpm
